# course-work

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  user_settings.json
data/: spending_by_weekday_2.json
src/: reports.py  services.py  utils.py  views.py
test/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
